# Bag_of_virtual_words

./: CMakeLists.txt  README.md  dataset_generation  dataset_generation.cpp  main.cpp
html_writer_files/: AddCSSStyle.cpp  AddImage.cpp  AddTitle.cpp  CloseBody.cpp  CloseDocument.cpp  CloseRow.cpp  OpenBody.cpp  OpenDocument.cpp  OpenRow.cpp
image_browser_files/: AddFullRow.cpp  CreateImageBrowser.cpp
